--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxt/content": "^2.13.4",
+    "@nuxtjs/tailwindcss": "^6.12.2",
+    "highlight.js": "^11.10.0",
     "nuxt": "^3.13.2",
+    "p5": "^1.11.0",
     "vue": "latest",
     "vue-router": "latest"
   }
